# agent-remote

./: AGENT_GUIDANCE.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
crates/agent-remote-client/: Cargo.toml
crates/agent-remote-client/src/: lib.rs  log_writer.rs  main.rs  transfer.rs
crates/agent-remote-client/tests/: end_to_end.rs  transfers.rs
crates/agent-remote-mcp/: Cargo.toml
crates/agent-remote-mcp/src/: lib.rs  main.rs
crates/agent-remote-mcp/tests/: mcp_stdio.rs
crates/agent-remote-protocol/: Cargo.toml
crates/agent-remote-protocol/src/: error.rs  lib.rs  messages.rs  record.rs
crates/agent-remote-protocol/tests/: protocol.rs
crates/agent-remote-server/: Cargo.toml
crates/agent-remote-server/src/: config.rs  exec.rs  fs_ops.rs  fsync.rs  hash.rs  lib.rs  main.rs  patch.rs  server.rs  store.rs  transfer.rs  undo.rs  workspace.rs
crates/agent-remote-server/tests/: edit_create.rs  exec_lifecycle.rs  integration.rs
