[package]
name = "agent-remote-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-remote-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
thiserror.workspace = true
libc = "0.2"
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
agent-remote-server = { path = "../agent-remote-server" }

[[bin]]
name = "agent-remote"
path = "src/main.rs"
