[package]
name = "agent-remote-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-remote-protocol.workspace = true
agent-remote-client.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
rmcp.workspace = true
schemars.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
agent-remote-server = { path = "../agent-remote-server" }

[lib]
name = "agent_remote_mcp"
path = "src/lib.rs"

[[bin]]
name = "agent-remote-mcp"
path = "src/main.rs"
