[package]
name = "agent-remote-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-remote-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
anyhow.workspace = true
hex.workspace = true
parking_lot = "0.12"
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "io-util"] }
agent-remote-protocol.workspace = true
sha2.workspace = true
hex.workspace = true
